@@ -8,6 +8,7 @@
 	* src/gui/login.cpp: Fixed layout of login dialog box when native
 	language is not English.
 	* src/gui/playerbox.cpp: Centered sprite inside selection box.
+	* src/gui/char_select.cpp: Reworked layout of dialog box.
 
 2007-10-19  Guillaume Melquiond  <guillaume.melquiond@gmail.com>
 
